--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -12,7 +12,7 @@
     /> -->
   </head>
   <body>
-    <!-- <header>
+    <header>
       <div class="header">
         <div class="container">
           <div class="header__inner">
@@ -43,16 +43,19 @@
             </nav>
             <div class="header__registration">
               <a href="login.html" class="header__registration-link">
-                <button class="whiteButton">Login</button>
+                <button class="whiteButton header-button">Login</button>
               </a>
               <a href="signup.html" class="header__registration-link">
-                <button class="purpleButton">Sign Up</button>
+                <button class="purpleButton header-button">Sign Up</button>
               </a>
             </div>
+            <button class="header__burger">
+              <span></span><span></span><span></span>
+            </button>
           </div>
         </div>
       </div>
-    </header> -->
+    </header>
 
     <!-- <section class="subscribe">
       <div class="container">
@@ -336,4 +339,5 @@
   </body>
   <script src="/firstProject/blogJS/gallery.js"></script>
   <script src="/firstProject/blogJS/dropdown.js"></script>
+  <script src="/firstProject/burger.js"></script>
 </html>
