--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-    <!-- <header>
+    <header>
       <div class="header">
         <div class="container">
           <div class="header__inner">
@@ -44,16 +44,19 @@
             </nav>
             <div class="header__registration">
               <a href="login.html" class="header__registration-link">
-                <button class="whiteButton">Login</button>
+                <button class="header-button whiteButton">Login</button>
               </a>
               <a href="signup.html" class="header__registration-link">
-                <button class="purpleButton">Sign Up</button>
+                <button class="header-button purpleButton">Sign Up</button>
               </a>
             </div>
+            <button class="header__burger">
+              <span></span><span></span><span></span>
+            </button>
           </div>
         </div>
       </div>
-    </header> -->
+    </header>
 
     <!-- <section class="application">
       <div class="container">
@@ -860,4 +863,5 @@
   <script src="/firstProject/indexJS/favorite notification.js"></script>
   <script src="/firstProject/indexJS/slider.js"></script>
   <script src="/firstProject/indexJS/dropDown.js"></script>
+  <script src="/firstProject/burger.js"></script>
 </html>
