--- a/firstProject/blog.html
+++ b/firstProject/blog.html
@@ -57,7 +57,7 @@
       </div>
     </header>
 
-    <!-- <section class="subscribe">
+    <section class="subscribe">
       <div class="container">
         <div class="subscribe__inner">
           <div class="subscribe__content">
@@ -76,9 +76,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="articles">
+    <section class="articles">
       <div class="container">
         <div class="articles__wrapper">
           <div class="articles__head">
@@ -188,9 +188,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="questions">
+    <section class="questions">
       <div class="container">
         <div class="questions__wrapper">
           <div class="questions__title">
@@ -289,7 +289,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <footer class="footer">
       <div class="container">
