--- a/firstProject/index.html
+++ b/firstProject/index.html
@@ -58,7 +58,7 @@
       </div>
     </header>
 
-    <!-- <section class="application">
+    <section class="application">
       <div class="container">
         <div class="application__inner">
           <div class="application__left">
@@ -119,9 +119,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="features">
+    <section class="features">
       <div class="features__box">
         <div class="features__item">
           <h1 class="features__item-title">10K+</h1>
@@ -142,9 +142,9 @@
           >
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="mobile">
+    <section class="mobile">
       <div class="container">
         <div class="mobile__inner">
           <div class="mobile__left">
@@ -177,9 +177,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="restaurants">
+    <section class="restaurants">
       <div class="container">
         <div class="restaurants__header">
           <span class="restaurants__header-top"
@@ -264,9 +264,9 @@
           </a>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="dishes">
+    <section class="dishes">
       <div class="container">
         <div class="dishes__wrapper">
           <div class="dishes__header">
@@ -390,9 +390,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="purchase">
+    <section class="purchase">
       <div class="container">
         <div class="purchase__wrapper">
           <div class="purchase__inner">
@@ -515,9 +515,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="customer">
+    <section class="customer">
       <div class="container">
         <div class="customer__wrapper">
           <div class="customer__inner">
@@ -784,9 +784,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="subscribe">
+    <section class="subscribe">
       <div class="container">
         <div class="subscribe__inner">
           <div class="subscribe__content">
@@ -805,7 +805,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <footer class="footer">
       <div class="container">
@@ -853,11 +853,11 @@
       </div>
     </footer> -->
 
-    <!-- <div class="notification">
+    <div class="notification">
       <div class="notification-content">
         <h3>You have added a restaurant to your favorite</h3>
       </div>
-    </div> -->
+    </div>
   </body>
 
   <script src="/firstProject/indexJS/favorite notification.js"></script>
