--- a/firstProject/menu.html
+++ b/firstProject/menu.html
@@ -57,7 +57,7 @@
       </div>
     </header>
 
-    <!-- <section class="weekend">
+    <section class="weekend">
       <div class="container">
         <div class="weekend__wrapper">
           <div class="weekend__inner">
@@ -123,9 +123,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="restaurants">
+    <section class="restaurants">
       <div class="container">
         <div class="restaurants__header">
           <span class="restaurants__header-top"
@@ -207,9 +207,9 @@
           </a>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="dishes">
+    <section class="dishes">
       <div class="container">
         <div class="dishes__wrapper">
           <div class="dishes__header">
@@ -333,9 +333,9 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="questions">
+    <section class="questions">
       <div class="container">
         <div class="questions__wrapper">
           <div class="questions__title">
@@ -434,7 +434,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- <footer class="footer">
       <div class="container">
